# notes

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy_docs.sh  environment.yaml  genindex.html  index.html  objects.inv  prf-prf.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build_and_deploy.yml  deploy.yml
Maths/: arithmetic_series.html  bibliography.html  causal_inference.html  eigenvalues_and_eigenvectors.html  index.html  matrix_operations.html  pythagorean_means.html  shannon_entropy.html
Programming/: bash.html  decorators.html  docker.html  dockerfile.html  generators.html  generators_and_recursion.html  import_system.html  index.html  linux.html  monads.html  nqueens.html  numpy_broadcasting.html  regular_expressions.html  rust.html  terminal_commands.html
Stats/: Information_Content.html  counterfactual_survival_analysis.html  domain_generalisation.html  f1_score.html  gamblers_ruin.html  index.html  linear_regression.html  metrics.html  moment_generating_functions.html  r_squared.html
_sources/Maths/: arithmetic_series.rst.txt  causal_inference.rst.txt  eigenvalues_and_eigenvectors.rst.txt  index.rst.txt  pythagorean_means.ipynb.txt
_sources/Programming/: docker.rst.txt  dockerfile.rst.txt  generators.ipynb.txt  generators_and_recursion.rst.txt  import_system.rst.txt  index.rst.txt  nqueens.rst.txt  numpy_broadcasting.ipynb.txt  (+2 more)
_static/: notebookstyle.css
docs/: .buildinfo  conda_vs_pip.html  genindex.html  index.html  mlflow.html  objects.inv  search.html  searchindex.js
(+98 files in other folders)
