[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notes"
authors = [
    {name = "Alex Gregory"},
]
description = "My personal notes"
readme = "README.md"
dependencies = [
    "sphinx",
    "sphinx-book-theme",
    "nbsphinx",  # For rendering jupyter notebooks
    "jupyterlab",
    "jupyterlab-vim",
    "numpy",
    "matplotlib",
    "pre-commit"
]
version = "0.0.1"
