[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notes"
authors = [
    {name = "Alex Gregory"},
]
description = "My personal notes"
readme = "README.md"
dependencies = [
    "sphinx",
    "pydata-sphinx-theme",
    "nbsphinx",  # For rendering jupyter notebooks
    "pre-commit",
    "sphinxcontrib-jquery",
    "plotly",
]
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "jupyterlab-vim",
    "numpy",
    "matplotlib",
]
